# OOP

./: CMakeLists.txt
homework/8-1/: Student.h  app8-1.cpp
homework/8-2/body/: Stduent.cpp  myString.cpp
homework/8-2/header/: Student.h  Tdate.h
homework/8/8-1/: Student.cpp  myString.cpp  myString.h
homework/8/8-2/: app8-2.cpp
homework/8/8-2/body/: GraduateStudent.cpp  Person.cpp  Tdate.cpp  Teacher.cpp
homework/8/8-2/header/: GraduateStudent.h  Person.h  Teacher.h
lesson/class11/11-1/: c11-1.cpp
lesson/class11/11-2/: c11-2.cpp
